--- a/birdroadscup.html
+++ b/birdroadscup.html
@@ -8,8 +8,8 @@
     <title>Bird Roads Cup</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="birdroadscup.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,28 +18,54 @@
     <![endif]-->
   </head>
   <body>
-
     
-    <h1>Hello, world!</h1>
-    <div class="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Bird Roads Cup</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="playofftree.html">Playoff Tree</a></li>
+            <li><a href="teams.html">Teams</a></li>
+            <li><a href="#stats">Stats</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container-fluid">
+      <h1>Playoff Tree</h1>
       <div class="row">
-	<div class="col-md-5">
-	  <div id="demo">
+	<div class="col-xs-4">
+	  <div id="westBracket"></div>
+	</div>
+	<div class="col-xs-4">
+	  <div class="row">
+	    <div class="col-xs-3">
+	      <img src="2017/teams/SJS/SJSlogo.png" width="100%" class="centering"></img>
+	      <p class="finalscore">3</p>
+	    </div>
+	    <div class="col-xs-6">
+	     <img src="awards/BirdRoadsCup.jpg" width="100%" class="centering"></img>
+	    </div>
+	    <div class="col-xs-3">
+	      <img src="2017/teams/CBJ/CBJlogo.png" width="100%" class="centering"></img>
+	      <p class="finalscore">4</p>
+	    </div>
 	  </div>
 	</div>
-	<div class="col-md-2">
-	  Winner!!
-	</div>
-	<div class="col-md-5">
-	  <div id="demo2">
-	  </div>
+	<div class="col-xs-4">
+	  <div id="eastBracket"></div>
 	</div>
       </div>
     </div>
-    
-
-    <img src=teams/CBJ/CBJlogo.png></img>
-	
 
 
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -50,3 +76,5 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
+
+<!-- convert teams/CBJ/CBJlogo.png -alpha set -bordercolor white -border 1 -fill none -fuzz 3% -draw "color 0,0 floodfill" -shave 1x1 d.png -->
